[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Yanina Arameleva",email = "yanina.arameleva@carvago.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.76.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "openai-agents (>=0.0.13,<0.0.14)",
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
